Fixed scrollbar not styling in Firefox

--- a/webapp/src/index.css
+++ b/webapp/src/index.css
@@ -35,13 +35,22 @@ textarea {
     cursor: pointer;
 }
 
+/* For Firefox */
+* {
+    scrollbar-width: thin;
+    scrollbar-color: rgb(84,84,84) transparent;
+}
+
+/* For Chrome */
 ::-webkit-scrollbar {
     width: 3px;
 }
+
 ::-webkit-scrollbar-thumb {
     background: rgba(84,84,84, 0.4);
     border-radius: 5px;
 }
+
 ::-webkit-scrollbar-thumb:hover {
     background: rgba(84,84,84, 0.8);
 }
